# pyflix

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  wsgi.py
pyflix/: __init__.py  app.py  routes.py
pyflix/static/: style.css
pyflix/templates/: base.html  commands.html  index.html
tests/: conftest.py  test_api.py  test_index.py
