[tool.poetry]
name = "pyflix"
version = "0.1.0"
description = "App to keep netflix from pausing by listening to LAN HTTP requests"
authors = ["antoniouaa <antoniouaa@hotmail.com>"]
license = "MIT"
repository = "https://github.com/antoniouaa/supreme-lamp"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
keyboard = "^0.13.5"
python-dotenv = "^0.15.0"
gunicorn = {version = "^20.0.4", platform = "linux"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
blinker = "^1.4"
pytest-cov = "^2.11.1"
coveralls = "^3.0.1"
pre-commit = "^2.11.1"
taskipy = "^1.8.1"


[tool.taskipy.tasks]
run = {cmd="flask run -h 0.0.0.0 -p 5000", detail="Launch the app"}

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.core.masonry.api"
